# specialization-stage3

./: .golangci.yml  .trivy.yaml  .trivyignore  QUICK_START.md  README.md  TERRAFORM_CHANGES.md  VALIDATION_CHECKLIST.md  docker-compose.yml  pyproject.toml
.github/: ARGOCD_INTEGRATION.md  CICD_GUIDE.md  FILES_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  README.md  SETUP_CHECKLIST.md  TABLE_OF_CONTENTS.md
.github/workflows/: ci-analytics.yml  ci-auth.yml  ci-evaluation.yml  ci-flag.yml  ci-go-reusable.yml  ci-python-reusable.yml  ci-target.yml
analytics-service/: .env  README.md  app.py  requirements.txt
auth-service/: .env  main.go
docs/: ARGOCD_INTEGRATION.md  DEPLOYMENT_GUIDE.md  QUICK_REFERENCE.md
evaluation-service/: .env  handlers.go
flag-service/: .env  app.py  requirements.txt
gitops/: README.md  TERRAFORM_UPDATE_GUIDE.md  WORKFLOW_GUIDE.md  update-helm-values.sh  validate-structure.sh
gitops/apps/: analytics-app.yaml  argocd-root.yaml  auth-app.yaml  evaluation-app.yaml  flag-app.yaml  target-app.yaml
gitops/argocd/: config.yaml  install.sh  namespace.yaml  rbac.yaml  secret-management.yaml  values.yaml
gitops/helm/analytics-service/: Chart.yaml  values.yaml
gitops/helm/analytics-service/templates/: deployment.yaml  hpa.yaml  secret.yaml  service.yaml  serviceaccount.yaml
gitops/helm/auth-service/: Chart.yaml  values.yaml
gitops/helm/auth-service/templates/: deployment.yaml  hpa.yaml  secret.yaml  service.yaml  serviceaccount.yaml
gitops/helm/evaluation-service/: Chart.yaml  values.yaml
gitops/helm/flag-service/: Chart.yaml  values.yaml
gitops/helm/target-service/: Chart.yaml  values.yaml
gitops/iam-roles/: analytics-service-policy.json  analytics-service-role-trust-policy.json  evaluation-service-policy.json  evaluation-service-role-trust-policy.json
gitops/kustomize/base/: kustomization.yaml
gitops/tests/: manage-applications.sh  test-argocd-workflow.sh  test-e2e-workflow.sh
infra/: README.md  main.tf  outputs.tf  provider.tf  terraform.tfvars.example  variables.tf
infra/modules/databases/: main.tf  outputs.tf  variables.tf
infra/modules/ecr/: main.tf  outputs.tf  variables.tf
infra/modules/eks/: main.tf  outputs.tf  variables.tf
infra/modules/github/: main.tf  variables.tf
infra/modules/messaging/: main.tf  outputs.tf  variables.tf
infra/modules/networking/: main.tf  outputs.tf  variables.tf
target-service/: .env  app.py
(+20 files in other folders)
